fixing buttons and spacing

--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -14,6 +14,8 @@ a:hover {
 }
 .btn {
    border-radius: 70px;
+   border: none;
+   box-shadow: 2px 2px 5px rgb(167, 166, 166);
    font-variant-caps: petite-caps;
    font-size: 17px;
    font-family: "Heebo", sans-serif;
@@ -25,7 +27,7 @@ a:hover {
    position: relative;
 }
 .btn:hover {
-   background-color: #2c2c2c;
+   background-color: rgb(43, 43, 43);
 }
 p {
    font-size: 18px;
