--- a/src/wireless-sub-page.css
+++ b/src/wireless-sub-page.css
@@ -13,10 +13,14 @@
    margin: 0;
 }
 .app-screen {
+   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
    max-width: 300px;
 }
 .wireless-images {
    display: block;
    max-width: 500px;
    padding: 100px 0 0 50px;
+}
+.text {
+   padding-top: 20px;
 }
